[build-system]
# NOTE: Setuptools >=61 fully supports pyproject-based builds and is the common
# floor for projects that may later adopt PEP 621 metadata. Keeping scikit-build
# classic for now; full migration is tracked in the TODO below.
requires= [
  "setuptools>=61",
  "scikit-build>=0.13",
  "cmake>=3.15",
  "ninja"
]
# Used by `python -m build` (PEP 517).
build-backend = "setuptools.build_meta"

# TODO (modernization): Consider migrating to scikit-build-core and PEP 621.
# - Move metadata to a [project] table (name, version, description, authors,
#   license-expression), drop setup.py.in, and configure builds under
#   [tool.scikit-build] or [tool.scikit-build-core]. This would further reduce
#   legacy behavior and simplify the build.
